--- a/App-Component/app.component.html
+++ b/App-Component/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="padding: 0px;">
     <div class="wrapper">
-        <menu [title]="'Marvel Chess Academy'" [items]="items" class="menu" (onLogoutEvent)="doLogout($event)"></menu>
+        <menu [title]="'Change Password'" [items]="items" class="menu" (onLogoutEvent)="doLogout($event)"></menu>
         <router-outlet></router-outlet>
     </div>
 </div>
